--- a/password.css
+++ b/password.css
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 
-body {
-    background-image: url("Genshin\ log\ photo.jpg");
+.body {
+    background-image: url("https://wallpapers.com/images/hd/genshin-impact-xiao-with-weapon-jld8x4mkqsbsrugs.jpg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
