--- a/logeado.css
+++ b/logeado.css
@@ -11,7 +11,7 @@ h6 {
     padding: 2%;
     transition: 1s;
     color: black;
-    background-color: #adadad;
+    background-color: #cecece;
     font-size: x-large;
 }
 
