--- a/password.css
+++ b/password.css
@@ -5,7 +5,7 @@
 }
 
 .body {
-    background-image: url("https://wallpapers.com/images/hd/genshin-impact-xiao-with-weapon-jld8x4mkqsbsrugs.jpg");
+    background-image: url("genshin-paisaje.jpeg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -14,11 +14,13 @@
 section {
     width: 600px;
     height: 400px;
-    background: #4e4d4d;
+    background: white;
     margin: auto;
     margin-top: 5%;
     padding: 2% 3%;
-    color: white;
+    color: black;
+    border: black solid 3px;
+    border-radius: 30px;
 }
 
 section h5 {
@@ -34,10 +36,9 @@ section h5 {
     border: black solid;
     margin-bottom: 5%;
     padding: 2% 2%;
-    background: #252323;
+    background: white;
     font-size: 125%;
     font-weight: bold;
-    color: white;
 }
 
 .button {
@@ -67,4 +68,7 @@ section h5 {
     background-color: white;
     width: fit-content;
     height: fit-content;
+    border: black solid 3px;
+    border-radius: 20px;
 }
+
